--- a/Set-Up.ipynb
+++ b/Set-Up.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "72aec1c0",
+   "execution_count": 1,
+   "id": "be9aaf2b",
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +156,9 @@
        "<IPython.core.display.SVG object>"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -176,17 +177,13 @@
     "print(f'font size: {drawer.FontSize()}')\n",
     "display(SVG(drawer.GetDrawingText()))\n",
     "\n",
-    "emojichem.emoji_draw(mol, 'wow.svg')\n",
-    "# in jupyter notebook\n",
-    "\n",
-    "svg = emojichem.emoji_draw(mol)\n",
-    "display(SVG(svg))"
+    "emojichem.emoji_draw('CCN(CC)C(=O)[C@H]1CN([C@@H]2Cc3c[nH]c4c3c(ccc4)C2=C1)C')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "11c7f8b3",
+   "id": "ccb21ef5",
    "metadata": {},
    "outputs": [
     {
@@ -194,27 +191,36 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: mendeleev in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (0.12.1)\n",
+      "Requirement already satisfied: cairosvg in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (2.5.2)\n",
+      "Requirement already satisfied: SQLAlchemy<2.0.0,>=1.4.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (1.4.45)\n",
       "Requirement already satisfied: numpy<2.0,>=1.21 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (1.23.5)\n",
+      "Requirement already satisfied: six<2.0.0,>=1.15.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (1.16.0)\n",
       "Requirement already satisfied: Pygments<3.0.0,>=2.8.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (2.13.0)\n",
+      "Requirement already satisfied: colorama<0.5.0,>=0.4.4 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (0.4.6)\n",
       "Requirement already satisfied: pandas>=0.25.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (1.5.2)\n",
       "Requirement already satisfied: pyfiglet<0.9,>=0.8.post1 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (0.8.post1)\n",
-      "Requirement already satisfied: six<2.0.0,>=1.15.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (1.16.0)\n",
-      "Requirement already satisfied: SQLAlchemy<2.0.0,>=1.4.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (1.4.45)\n",
-      "Requirement already satisfied: colorama<0.5.0,>=0.4.4 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from mendeleev) (0.4.6)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from pandas>=0.25.0->mendeleev) (2022.6)\n",
+      "Requirement already satisfied: cssselect2 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cairosvg) (0.7.0)\n",
+      "Requirement already satisfied: tinycss2 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cairosvg) (1.2.1)\n",
+      "Requirement already satisfied: defusedxml in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cairosvg) (0.7.1)\n",
+      "Requirement already satisfied: pillow in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cairosvg) (9.3.0)\n",
+      "Requirement already satisfied: cairocffi in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cairosvg) (1.4.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from pandas>=0.25.0->mendeleev) (2.8.2)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from SQLAlchemy<2.0.0,>=1.4.0->mendeleev) (2.0.1)\n"
+      "Requirement already satisfied: pytz>=2020.1 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from pandas>=0.25.0->mendeleev) (2022.6)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from SQLAlchemy<2.0.0,>=1.4.0->mendeleev) (2.0.1)\n",
+      "Requirement already satisfied: cffi>=1.1.0 in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cairocffi->cairosvg) (1.15.1)\n",
+      "Requirement already satisfied: webencodings in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cssselect2->cairosvg) (0.5.1)\n",
+      "Requirement already satisfied: pycparser in /home/whitead/miniconda3/envs/echem/lib/python3.10/site-packages (from cffi>=1.1.0->cairocffi->cairosvg) (2.21)\n"
      ]
     }
    ],
    "source": [
-    "!pip install mendeleev"
+    "!pip install mendeleev cairosvg"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d22e3f2c",
+   "id": "640e2093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "01ddc0df",
+   "id": "3e50ee84",
    "metadata": {},
    "outputs": [],
    "source": [
