--- a/Set-Up.ipynb
+++ b/Set-Up.ipynb
@@ -3,6 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e5f360a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install emojichem@https://github.com/whitead/emoji-chem/archive/refs/heads/main.zip\n",
+    "import emojichem\n",
+    "\n",
+    "emojichem.emoji_draw(\"CCN(CC)C(=O)[C@H]1CN([C@@H]2Cc3c[nH]c4c3c(ccc4)C2=C1)C\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "be9aaf2b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install mendeleev cairosvg"
+    "!pip install mendeleev grapheme"
    ]
   },
   {
@@ -44,26 +57,44 @@
    "source": [
     "# getting indices printed in corct order\n",
     "from mendeleev.fetch import fetch_table\n",
+    "import grapheme\n",
+    "import re\n",
     "\n",
     "df = fetch_table(\"elements\")\n",
-    "emojis = \"\"\"🥐⏱🚨🍌🍟🔋⭐️\n",
-    "       ⌚️💊🎇🥛💥🛰\n",
-    "🔦🙈 🌀⚜️📺🚲\n",
-    "⛈🚛 🗺📸🚀🛳\n",
-    "👩‍👦👥 🤔🔍🎭🎨\n",
-    "☢️🍷 🌊💎⛓🍭\n",
-    "🔱🚬 ⚛️💻⚙️🍖\n",
-    "💣💉 ⚖️🖋🦄🥓\n",
-    "🌎🇪🇺 💃☄️🛣📼\n",
-    "👩🏻‍🔬🎰 🏰💰⚗️🍴\n",
-    "🎓🐳 👁‍🗨🥇🥈🥉\n",
-    "🌞💄 💫🌡🏭🌥\n",
-    "🐼🌆 🗾🐀📱🥄✈️🤹‍♀️\n",
-    "💯😬 📝🚰🤖🍺🖥⛽️\n",
-    "🙇🏽🍒 🏇🌈👁💀🌋🌱\n",
-    "🏅🌕 💡🦅🌌💅😷🔥\n",
-    "      🍅⚡️🐟🥜🤢🪥\n",
-    "       🔬🌪🔮🔫👻🎃🎈\"\"\""
+    "emojis = \"\"\" 🥐⏱🚨🍌🍟🔋⭐️\n",
+    "     ⌚️💊🎇🥛💥🩻\n",
+    "     🌀⚜️📺🚲\n",
+    "🔦🙈🗺📸🚀🛳\n",
+    "⛈🚛🤔🔍🎭🎨\n",
+    "👩‍👦👥🌊💎⛓🍭\n",
+    "☢️🍷⚛️💻⚙️🍖\n",
+    "🔱🚬⚖️🖋🦄🥓\n",
+    "💣💉💃☄️🛣📼\n",
+    "🌎🇪🇺🏰💰⚗️🍴\n",
+    "👩🏻‍🔬🎰👁‍🗨🥇🥈🥉\n",
+    "🎓🐳💫🌡🏭🌥\n",
+    "🌞💄🗾🐀📱🥄✈️🤹‍♀️\n",
+    "🐼🌆📝🚰🤖🍺🖥⛽️\n",
+    "💯😬🏇🌈👁💀🌋🌱\n",
+    "🙇🏽🍒💡🦅🌌💅😷🔥\n",
+    "🏅🌕🍅⚡️🐟🥜🤢🪥\n",
+    "🔬🌪🔮🔫👻🎃🎈\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1cd557f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WTF fix up groups ?\n",
+    "for i in range(58, 72):\n",
+    "    g = i - 58 + 4\n",
+    "    df.loc[df.atomic_number == i, \"group_id\"] = g\n",
+    "for i in range(90, 104):\n",
+    "    g = i - 90 + 4\n",
+    "    df.loc[df.atomic_number == i, \"group_id\"] = g"
    ]
   },
   {
@@ -74,15 +105,25 @@
    "outputs": [],
    "source": [
     "emoji_dict = {}\n",
+    "\n",
     "for i, eg in enumerate(emojis.split(\"\\n\")):\n",
-    "    group = [e for e in list(eg[::-1]) if len(e) > 0 and e.encode() != b\"\\xef\\xb8\\x8f\"]\n",
+    "    # group = [e for e in list(eg[::-1]) if len(e) > 0 and e.encode() != b'\\xef\\xb8\\x8f']\n",
+    "    # group = re.findall(r'\\X', group)\n",
+    "    eg = eg.strip()\n",
+    "    group = [grapheme.slice(eg, i, i + 1) for i in range(grapheme.length(eg))][::-1]\n",
     "    for j, e in enumerate(group):\n",
-    "        if j >= len(df[df.group_id == i + 1]):\n",
-    "            continue\n",
     "        emoji_dict[df[df.group_id == i + 1].iloc[j][\"name\"].lower()] = e\n",
     "with open(\"emoji_dict.txt\", \"w\") as f:\n",
     "    f.write(str(emoji_dict))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e8ad47b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
