Fixed emoji list again

--- a/Set-Up.ipynb
+++ b/Set-Up.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5f360a",
+   "id": "c33304fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,38 +62,49 @@
     "\n",
     "df = fetch_table(\"elements\")\n",
     "emojis = \"\"\" 🥐⏱🚨🍌🍟🔋⭐️\n",
-    "     ⌚️💊🎇🥛💥🩻\n",
+    "     ⌚️💊🎇🥛💥🛰\n",
     "     🌀⚜️📺🚲\n",
-    "🔦🙈🗺📸🚀🛳\n",
+    "     🗺📸🚀🛳\n",
     "⛈🚛🤔🔍🎭🎨\n",
     "👩‍👦👥🌊💎⛓🍭\n",
     "☢️🍷⚛️💻⚙️🍖\n",
     "🔱🚬⚖️🖋🦄🥓\n",
     "💣💉💃☄️🛣📼\n",
     "🌎🇪🇺🏰💰⚗️🍴\n",
-    "👩🏻‍🔬🎰👁‍🗨🥇🥈🥉\n",
-    "🎓🐳💫🌡🏭🌥\n",
+    "👩🏻‍🔬🎰🩻🥇🥈🥉\n",
+    "🎓🐳💫🌡🏭🗝️\n",
     "🌞💄🗾🐀📱🥄✈️🤹‍♀️\n",
     "🐼🌆📝🚰🤖🍺🖥⛽️\n",
-    "💯😬🏇🌈👁💀🌋🌱\n",
+    "💯😬🏇🌈👁💀🧨🌱\n",
     "🙇🏽🍒💡🦅🌌💅😷🔥\n",
     "🏅🌕🍅⚡️🐟🥜🤢🪥\n",
-    "🔬🌪🔮🔫👻🎃🎈\"\"\""
+    "🔁🤍🥝🌪🔮🔫👻🎃🎈\"\"\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1cd557f",
+   "id": "c7684f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df.atomic_number == 57, \"group_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea993a10",
    "metadata": {},
    "outputs": [],
    "source": [
     "# WTF fix up groups ?\n",
     "for i in range(58, 72):\n",
-    "    g = i - 58 + 4\n",
+    "    g = i - 57 + 4\n",
+    "    print(i, g)\n",
     "    df.loc[df.atomic_number == i, \"group_id\"] = g\n",
     "for i in range(90, 104):\n",
-    "    g = i - 90 + 4\n",
+    "    g = i - 89 + 4\n",
     "    df.loc[df.atomic_number == i, \"group_id\"] = g"
    ]
   },
@@ -107,11 +118,22 @@
     "emoji_dict = {}\n",
     "\n",
     "for i, eg in enumerate(emojis.split(\"\\n\")):\n",
-    "    # group = [e for e in list(eg[::-1]) if len(e) > 0 and e.encode() != b'\\xef\\xb8\\x8f']\n",
-    "    # group = re.findall(r'\\X', group)\n",
     "    eg = eg.strip()\n",
     "    group = [grapheme.slice(eg, i, i + 1) for i in range(grapheme.length(eg))][::-1]\n",
+    "    if i > 3:\n",
+    "        print(group)\n",
+    "        # insert lats/acts\n",
+    "        temp = group[-3]\n",
+    "        del group[-3]\n",
+    "        group.append(temp)\n",
+    "        print(group)\n",
+    "        temp = group[-4]\n",
+    "        del group[-4]\n",
+    "        group.insert(-2, temp)\n",
+    "        print(group)\n",
+    "    print(group, df[df.group_id == i + 1][\"name\"])\n",
     "    for j, e in enumerate(group):\n",
+    "        print(i + 1, df[df.group_id == i + 1].iloc[j][\"name\"].lower(), e)\n",
     "        emoji_dict[df[df.group_id == i + 1].iloc[j][\"name\"].lower()] = e\n",
     "with open(\"emoji_dict.txt\", \"w\") as f:\n",
     "    f.write(str(emoji_dict))"
@@ -120,7 +142,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8ad47b",
+   "id": "1e8a4921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(emoji_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e31beeb",
    "metadata": {},
    "outputs": [],
    "source": []
