--- a/colab/EmojiChem.ipynb
+++ b/colab/EmojiChem.ipynb
@@ -1,21 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "drcxuk2HPLbI"
+   },
+   "source": [
+    "# Emoji Chem\n",
+    "\n",
+    "https://github.com/whitead/emoji-chem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "cellView": "form",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "collapsed": true,
-    "id": "DGZ0I9Kg1UMA",
-    "outputId": "123e2442-2ef5-42a5-d010-72fb72a5c86c"
+    "id": "DGZ0I9Kg1UMA"
    },
    "outputs": [],
    "source": [
     "# @title Install Packages\n",
-    "!pip install emojichem@git+git://github.com/whitead/emoji-chem.git"
+    "!pip install -U emojichem@https://github.com/whitead/emoji-chem/archive/refs/heads/main.zip"
    ]
   },
   {
@@ -28,7 +35,7 @@
      "height": 221
     },
     "id": "6SyUt3j11WV2",
-    "outputId": "edcbf62d-6d7c-4bf2-e7f1-244a607e4d95"
+    "outputId": "1b79ec5b-77a5-4fda-8a7d-424fe3185fd3"
    },
    "outputs": [],
    "source": [
@@ -41,8 +48,7 @@
     "\n",
     "\n",
     "mol = Chem.MolFromSmiles(smiles)\n",
-    "svg = emojichem.emoji_draw(mol)\n",
-    "display(SVG(svg))"
+    "emojichem.emoji_draw(mol)"
    ]
   },
   {
@@ -52,14 +58,16 @@
     "cellView": "form",
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 660
+     "height": 639
     },
     "id": "dRMxu5m126_S",
-    "outputId": "26eeee88-a717-463b-df56-735acf6770da"
+    "outputId": "4e95a152-b5f5-4709-9d53-06cfa85c4a15"
    },
    "outputs": [],
    "source": [
     "# @title The emojis\n",
+    "# @markdown Emoji list was taken (with minor modifications) from Nicola Ga-stan (@nicgaston) in [this tweet](https://twitter.com/nicgaston/status/914311195305193472)\n",
+    "\n",
     "import tabulate\n",
     "\n",
     "table = []\n",
@@ -73,29 +81,26 @@
     "        table[j % N].extend([\"|\", e, emojichem.data.emoji_dict[e]])\n",
     "display(HTML(tabulate.tabulate(table, tablefmt=\"html\")))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "yvzbX9Kt43kD"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "colab": {
-   "collapsed_sections": [],
    "name": "emoji-chem.ipynb",
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.8 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.7.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3e5a039a7a113538395a7d74f5574b0c5900118222149a18efb009bf03645fce"
+   }
   }
  },
  "nbformat": 4,
