--- a/colab/EmojiChem.ipynb
+++ b/colab/EmojiChem.ipynb
@@ -39,12 +39,10 @@
    },
    "outputs": [],
    "source": [
-    "smiles = (\n",
-    "    \"O=C(NCC1CCCCC1N)C2=CC=CC=C2C3=CC=C(F)C=C3C(=O)NC4CCCCC4\"  # @param {type:\"string\"}\n",
-    ")\n",
+    "smiles = \"O=C(NCC1CCCCC1N)C2=CC=CC=C2C3=CC=C(F)C=C3C(=O)NC4CCCCC4\"  # @param {type:\"string\"}\n",
     "from rdkit import Chem\n",
     "import emojichem\n",
-    "from IPython.display import SVG, display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "\n",
     "mol = Chem.MolFromSmiles(smiles)\n",
